fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,16 @@ form {
   width: 100%;
 }
 
+p {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.spacing {
+  display: block;
+  margin-top: 20px;
+}
+
 #submit {
   width: 100%;
   background-color: darkolivegreen;
